modified:   public/manifest.json 	modified:   src/components/ListBlock/ListBlock.css 	modified:   src/components/ListBlock/ListBlock.jsx 	deleted:    src/components/ListHeader/ListHeader.jsx 	modified:   src/components/MoveBar/MoveBar.jsx 	modified:   src/components/ReadHeader/ReadHeader.jsx 	renamed:    src/components/ListHeader/ListHeader.css -> src/components/ReadPage/ReadPage.css 	new file:   src/components/ReadPage/ReadPage.jsx 	modified:   src/index.css 	modified:   src/index.js 	modified:   src/pages/ListPage/ListPage.css 	modified:   src/pages/ListPage/ListPage.jsx

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 body {
   margin: 0;
   font-family: 'Reem Kufi Fun', sans-serif;
+  color: #ffff;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
