--- a/src/components/ListBlock/ListBlock.css
+++ b/src/components/ListBlock/ListBlock.css
@@ -6,8 +6,10 @@
     background-color: #212325;
     border-radius: 1em;
     padding: 0 1.5em;
+    transform: scale(0);
 }
 
-.listblock-header{
-    
+.list-block-active{
+    transform: scale(1);
+
 }
