new file:   src/components/EmptyReadBlock/EmptyReadBlock.css 	new file:   src/components/EmptyReadBlock/EmptyReadBlock.jsx 	modified:   src/components/ListBlock/ListBlock.css 	modified:   src/components/ListBlock/ListBlock.jsx 	modified:   src/components/ReadBlock/ReadBlock.css 	modified:   src/components/ReadBlock/ReadBlock.jsx 	new file:   src/images/menu.svg 	modified:   src/pages/Page/Page.css 	modified:   src/pages/Page/Page.jsx

--- a/src/components/ListBlock/ListBlock.css
+++ b/src/components/ListBlock/ListBlock.css
@@ -1,15 +1,14 @@
-.listblock{
+.list-block{
     width: 80%;
     height: max-content;
     min-height: 10rem;
 
-    background-color: #212325;
     border-radius: 1em;
     padding: 0 1.5em;
-    transform: scale(0);
+    display: none;
 }
 
 .list-block-active{
-    transform: scale(1);
+    display: flex;
 
 }
