deleted:    src/components/EmptyReadBlock/EmptyReadBlock.css 	deleted:    src/components/EmptyReadBlock/EmptyReadBlock.jsx 	modified:   src/components/ListBlock/ListBlock.css 	modified:   src/components/ListBlock/ListBlock.jsx 	new file:   src/components/ReadBlock/EmptyReadBlock.jsx 	modified:   src/components/ReadBlock/ReadBlock.css 	modified:   src/components/ReadBlock/ReadBlock.jsx 	modified:   src/index.css 	modified:   src/pages/Page/Page.css 	modified:   src/pages/Page/Page.jsx

--- a/src/components/ReadBlock/ReadBlock.css
+++ b/src/components/ReadBlock/ReadBlock.css
@@ -1,9 +1,25 @@
 .read-block{
-    width: 100vw;
-    height: max-content;
-    min-height: 10rem;
+    width: 100%;
+    height: 92%;
+    background-color: #3D4244;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
 
+.read-content{
+    border: solid red 1px;
+
+    width: 80%;
+
+}
+
+.read-footer{
+    width: 100vw;
+    height: 8%;
+    display:  flex;
+    align-items: center;
+    align-self: flex-end;
     background-color: #212325;
-    border-radius: 1em;
-    padding: 0 1.5em;
+    justify-content: center;
 }
