--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Reem+Kufi+Fun:wght@400;500;600;700&display=swap');
 body {
   margin: 0;
+  padding: 0;
   font-family: 'Reem Kufi Fun', sans-serif;
   color: #ffff;
   -webkit-font-smoothing: antialiased;
