--- a/src/pages/Page/Page.css
+++ b/src/pages/Page/Page.css
@@ -1,9 +1,13 @@
 .main-page{
+    width: 100%;
+    height: 100vh;
     background-color: #212325;
-
 }
 
 .header{
-    display: flex;
+    height: 8%;
+    display:  flex;
+    align-items: center;
     justify-content: space-between;
 }
+
