--- a/src/components/ReadBlock/ReadBlock.css
+++ b/src/components/ReadBlock/ReadBlock.css
@@ -1,6 +1,6 @@
 .read-block{
     width: 100%;
-    height: 92%;
+    height: fit-content;
     background-color: #3D4244;
     display: flex;
     flex-wrap: wrap;
@@ -8,15 +8,30 @@
 }
 
 .read-content{
-    border: solid red 1px;
-
+    margin: 1em;
     width: 80%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
 
+.read-navigate{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.read-page{
+    margin: 1em;
+}
+
+.read-page img{
+    height: 80vh;
 }
 
 .read-footer{
     width: 100vw;
-    height: 8%;
+    height: 8vh;
     display:  flex;
     align-items: center;
     align-self: flex-end;
