modified:   src/components/ListBlock/ListBlock.css 	modified:   src/components/ListBlock/ListBlock.jsx 	modified:   src/components/ReadBlock/ReadBlock.css 	modified:   src/components/ReadBlock/ReadBlock.jsx 	modified:   src/pages/Page/Page.css 	modified:   src/pages/Page/Page.jsx

--- a/src/components/ReadBlock/ReadBlock.css
+++ b/src/components/ReadBlock/ReadBlock.css
@@ -38,3 +38,11 @@
     background-color: #212325;
     justify-content: center;
 }
+
+.imageBack {
+    margin-right: 10px;
+}
+
+.imageNext {
+    margin-left: 10px;
+}
