--- a/src/components/ListBlock/ListBlock.css
+++ b/src/components/ListBlock/ListBlock.css
@@ -9,3 +9,10 @@
     display: flex;
 
 }
+.imagePreview {
+    margin-left: 30px;
+    border-radius: 10px;
+    width: 175px;
+    height: 250px;
+    margin-bottom: 20px;
+}
