--- a/src/pages/Page/Page.css
+++ b/src/pages/Page/Page.css
@@ -9,5 +9,13 @@
     display:  flex;
     align-items: center;
     justify-content: space-between;
+    margin-bottom: 10px;
 }
 
+.imageMenu {
+    margin-right: 20px;
+}
+
+.logo {
+    margin-left: 25px;
+}
