new file:   src/components/Login/Login.css 	new file:   src/components/Login/Login.jsx 	new file:   src/images/comment.svg 	new file:   src/images/exit.svg 	modified:   src/pages/Page/Page.css 	modified:   src/pages/Page/Page.jsx 	new file:   src/storage/users/users.js

--- a/src/pages/Page/Page.css
+++ b/src/pages/Page/Page.css
@@ -10,12 +10,9 @@
     align-items: center;
     justify-content: space-between;
     margin-bottom: 10px;
+    padding: 0 20px;
 }
 
-.imageMenu {
-    margin-right: 20px;
-}
-
-.logo {
-    margin-left: 25px;
+.header-button-group img{
+    margin-left: 15px;
 }
