--- a/src/pages/Page/Page.css
+++ b/src/pages/Page/Page.css
@@ -13,6 +13,11 @@
     padding: 0 20px;
 }
 
-.header-button-group img{
+.header-button-group{
+    display: flex;
+    align-items: center;
+}
+
+.header-button-group *{
     margin-left: 15px;
 }
