--- a/src/pages/Page/Page.css
+++ b/src/pages/Page/Page.css
@@ -21,3 +21,12 @@
 .header-button-group *{
     margin-left: 15px;
 }
+
+.catlog {
+    color: white;
+    background-color: #2D72B7;
+    font-size: 120%;
+    width: 250px;
+    height: 50px;
+    border-radius: 25px;
+}
